# beets-notify

./: README.rst  pyproject.toml  rewrite-git-history.sh
beetsplug/: notify.py
